2008-05-24  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclteffect.c (rbclt_effect_template_initialize): Can
	now accept an integer for the first argument to create a timeline
	for that duration.
	(rbclt_effect_fade, rbclt_effect_depth, rbclt_effect_move)
	(rbclt_effect_do_path, rbclt_effect_rotate): Tidied up indentation
	(rbclt_effect_scale): Fixed the third parameter which should be
	the y-scale end instead of the gravity.
	(rbclt_effect_rotate, rbclt_effect_set_timeline_clone)
	(rbclt_effect_init): Added a getter and setter for the 'clone'
	property. This can be created automatically because there is
	already a 'clone' method in Object.

2008-05-23  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltcontainer.c: Added wrappers for find_child_by_name,
	raise_child, lower_child and sort_depth_order.

	* clutter/rbcltbehaviourscale.c: Added wrappers {get,set}_bounds.

2008-05-01  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltbehaviourrotate.c: Renamed begin to start. Tidied
	to wrap at 80 columns. Added a wrapper for get_bounds.

	* clutter/rbcltbehaviouropacity.c: Added wrappers for
	{get,set}_bounds.

	* clutter/rbcltbehaviourellipse.c
	(rbclt_behaviour_ellipse_initialize): Renamed begin to start.

2008-05-01  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltbehaviourdepth.c: Added wrappers for
	clutter_behaviour_depth_{get,set}_bounds.

2008-05-01  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltbehaviourpath.c (rbclt_behaviour_path_init): 
	* clutter/rbcltbehaviourbspline.c (rbclt_behaviour_bspline_init):
	Added 'append' and '<<' alias for append_knot

2008-04-30  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c (rbclt_actor_is_rotated): Added wrappers
	for clutter_actor_{is_rotated,is_scaled,get_stage}.

2008-04-29  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c: Added wrappers for methods to set the
	anchor point.

2008-04-28  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclutter.c (Init_clutter): Added rbclt_shader_init
